[tool.poetry]
name = "imc"
version = "0.1.0"
description = ""
authors = ["FallenDeity <61227305+FallenDeity@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.4"
pandas = "^2.2.3"
jsonpickle = "^4.0.5"
prosperity3bt = "^0.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.252"
isort = "^5.12.0"
black = "^25.1.0"
pre-commit = "^3.1.0"
pyright = "^1.1.295"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = false
reportPrivateImportUsage = false
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
